tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/default_app.k8s.io_v1beta1_application_basic-auth-ingress.yaml
apiVersion: app.k8s.io/v1beta1
kind: Application
metadata:
  labels:
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
  name: basic-auth-ingress
spec:
  addOwnerRef: true
  componentKinds:
  - group: core
    kind: ConfigMap
  - group: apps
    kind: Deployment
  descriptor:
    description: ""
    keywords:
    - basic-auth-ingress
    - kubeflow
    links:
    - description: About
      url: ""
    maintainers: []
    owners: []
    type: basic-auth-ingress
    version: v1beta1
  selector:
    matchLabels:
      app.kubernetes.io/component: basic-auth-ingress
      app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: basic-auth-ingress
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
