tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/kubeflow_apps_v1_deployment_whoami-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: basic-auth-ingress
  name: whoami-app
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: basic-auth-ingress
      app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: basic-auth-ingress
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
      kustomize.component: basic-auth-ingress
  template:
    metadata:
      labels:
        app: whoami
        app.kubernetes.io/component: basic-auth-ingress
        app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: basic-auth-ingress
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v0.7.0
        kustomize.component: basic-auth-ingress
    spec:
      containers:
      - env:
        - name: PORT
          value: "8081"
        image: gcr.io/cloud-solutions-group/esp-sample-app:1.0.0
        name: app
        ports:
        - containerPort: 8081
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: 8081
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
