tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/kubeflow_apps_v1_statefulset_backend-updater.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: basic-auth-ingress
    service: backend-updater
  name: backend-updater
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: basic-auth-ingress
      app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: basic-auth-ingress
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v0.7.0
      kustomize.component: basic-auth-ingress
      service: backend-updater
  serviceName: backend-updater
  template:
    metadata:
      labels:
        app.kubernetes.io/component: basic-auth-ingress
        app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: basic-auth-ingress
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v0.7.0
        kustomize.component: basic-auth-ingress
        service: backend-updater
    spec:
      containers:
      - command:
        - bash
        - /var/envoy-config/update_backend.sh
        env:
        - name: NAMESPACE
          value: kubeflow
        - name: SERVICE
          value: ambassador
        - name: HEALTHCHECK_PATH
          value: /whoami
        - name: INGRESS_NAME
          value: envoy-ingress
        image: gcr.io/kubeflow-images-public/ingress-setup:latest
        name: backend-updater
        volumeMounts:
        - mountPath: /var/envoy-config/
          name: config-volume
      serviceAccountName: kf-admin
      volumes:
      - configMap:
          name: envoy-config
        name: config-volume
  volumeClaimTemplates: []
