tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/kubeflow_cloud.google.com_v1beta1_backendconfig_basicauth-backendconfig.yaml
apiVersion: cloud.google.com/v1beta1
kind: BackendConfig
metadata:
  labels:
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: basic-auth-ingress
  name: basicauth-backendconfig
  namespace: kubeflow
spec:
  timeoutSec: 3600
