tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/kubeflow_ctl.isla.solutions_v1_cloudendpoint_kubeflow.yaml
apiVersion: ctl.isla.solutions/v1
kind: CloudEndpoint
metadata:
  labels:
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: basic-auth-ingress
  name: kubeflow
  namespace: kubeflow
spec:
  project: ""
  targetIngress:
    name: envoy-ingress
    namespace: istio-system
