tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/kubeflow_~g_v1_configmap_basic-auth-ingress-parameters.yaml
apiVersion: v1
data:
  appName: kubeflow
  hostname: ""
  ingressName: envoy-ingress
  ipName: ""
  istioNamespace: istio-system
  namespace: kubeflow
  privateGKECluster: "false"
  project: ""
  secretName: envoy-ingress-tls
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: basic-auth-ingress
  name: basic-auth-ingress-parameters
  namespace: kubeflow
