tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/kubeflow_~g_v1_service_istio-mapping-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: istio-mapping
      prefix_regex: true
      prefix: /(?!whoami|kflogin).*
      rewrite: ""
      service: istio-ingressgateway.istio-system
      precedence: 1
      use_websocket: true
  labels:
    app: istioMappingSvc
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    ksonnet.io/component: basic-auth-ingress
    kustomize.component: basic-auth-ingress
  name: istio-mapping-service
  namespace: kubeflow
spec:
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: istioMappingSvc
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: basic-auth-ingress
  type: ClusterIP
