tests/gcp/basic-auth-ingress/overlays/application/test_data/expected/rbac.authorization.k8s.io_v1beta1_clusterrolebinding_kf-admin-basic-auth.yaml
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: basic-auth-ingress
    app.kubernetes.io/instance: basic-auth-ingress-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: basic-auth-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: basic-auth-ingress
  name: kf-admin-basic-auth
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kf-admin-basic-auth
subjects:
- kind: ServiceAccount
  name: kf-admin
  namespace: istio-system
